src/test/ui/impl-trait/where-allowed.stderr
error[E0666]: nested `impl Trait` is not allowed
  --> $DIR/where-allowed.rs:45:51
   |
LL | fn in_impl_Fn_parameter_in_parameters(_: &impl Fn(impl Debug)) { panic!() }
   |                                           --------^^^^^^^^^^-
   |                                           |       |
   |                                           |       nested `impl Trait` here
   |                                           outer `impl Trait`

error[E0666]: nested `impl Trait` is not allowed
  --> $DIR/where-allowed.rs:53:57
   |
LL | fn in_impl_Fn_parameter_in_return() -> &'static impl Fn(impl Debug) { panic!() }
   |                                                 --------^^^^^^^^^^-
   |                                                 |       |
   |                                                 |       nested `impl Trait` here
   |                                                 outer `impl Trait`

error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/where-allowed.rs:113:16
   |
LL |     type Out = impl Debug;
   |                ^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/where-allowed.rs:148:23
   |
LL | type InTypeAlias<R> = impl Debug;
   |                       ^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/where-allowed.rs:151:39
   |
LL | type InReturnInTypeAlias<R> = fn() -> impl Debug;
   |                                       ^^^^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:15:40
   |
LL | fn in_fn_parameter_in_parameters(_: fn(impl Debug)) { panic!() }
   |                                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:19:42
   |
LL | fn in_fn_return_in_parameters(_: fn() -> impl Debug) { panic!() }
   |                                          ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:23:38
   |
LL | fn in_fn_parameter_in_return() -> fn(impl Debug) { panic!() }
   |                                      ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:27:40
   |
LL | fn in_fn_return_in_return() -> fn() -> impl Debug { panic!() }
   |                                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:31:49
   |
LL | fn in_dyn_Fn_parameter_in_parameters(_: &dyn Fn(impl Debug)) { panic!() }
   |                                                 ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:38:55
   |
LL | fn in_dyn_Fn_parameter_in_return() -> &'static dyn Fn(impl Debug) { panic!() }
   |                                                       ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:45:51
   |
LL | fn in_impl_Fn_parameter_in_parameters(_: &impl Fn(impl Debug)) { panic!() }
   |                                                   ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:53:57
   |
LL | fn in_impl_Fn_parameter_in_return() -> &'static impl Fn(impl Debug) { panic!() }
   |                                                         ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:61:38
   |
LL | fn in_Fn_parameter_in_generics<F: Fn(impl Debug)> (_: F) { panic!() }
   |                                      ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:76:32
   |
LL | struct InBraceStructField { x: impl Debug }
   |                                ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:80:41
   |
LL | struct InAdtInBraceStructField { x: Vec<impl Debug> }
   |                                         ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:84:27
   |
LL | struct InTupleStructField(impl Debug);
   |                           ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:89:25
   |
LL |     InBraceVariant { x: impl Debug },
   |                         ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:91:20
   |
LL |     InTupleVariant(impl Debug),
   |                    ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:102:23
   |
LL |     fn in_return() -> impl Debug;
   |                       ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:119:34
   |
LL |     fn in_trait_impl_return() -> impl Debug { () }
   |                                  ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:132:33
   |
LL |     fn in_foreign_parameters(_: impl Debug);
   |                                 ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:135:31
   |
LL |     fn in_foreign_return() -> impl Debug;
   |                               ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:151:39
   |
LL | type InReturnInTypeAlias<R> = fn() -> impl Debug;
   |                                       ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:156:16
   |
LL | impl PartialEq<impl Debug> for () {
   |                ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:161:24
   |
LL | impl PartialEq<()> for impl Debug {
   |                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:166:6
   |
LL | impl impl Debug {
   |      ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:172:24
   |
LL | impl InInherentImplAdt<impl Debug> {
   |                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:178:11
   |
LL |     where impl Debug: Debug
   |           ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:185:15
   |
LL |     where Vec<impl Debug>: Debug
   |               ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:192:24
   |
LL |     where T: PartialEq<impl Debug>
   |                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:199:17
   |
LL |     where T: Fn(impl Debug)
   |                 ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:206:22
   |
LL |     where T: Fn() -> impl Debug
   |                      ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:212:40
   |
LL | struct InStructGenericParamDefault<T = impl Debug>(T);
   |                                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:216:36
   |
LL | enum InEnumGenericParamDefault<T = impl Debug> { Variant(T) }
   |                                    ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:220:38
   |
LL | trait InTraitGenericParamDefault<T = impl Debug> {}
   |                                      ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:224:41
   |
LL | type InTypeAliasGenericParamDefault<T = impl Debug> = T;
   |                                         ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:228:11
   |
LL | impl <T = impl Debug> T {}
   |           ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:235:40
   |
LL | fn in_method_generic_param_default<T = impl Debug>(_: T) {}
   |                                        ^^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:241:29
   |
LL |     let _in_local_variable: impl Fn() = || {};
   |                             ^^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/where-allowed.rs:243:46
   |
LL |     let _in_return_in_local_variable = || -> impl Fn() { || {} };
   |                                              ^^^^^^^^^

error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/where-allowed.rs:228:7
   |
LL | impl <T = impl Debug> T {}
   |       ^
   |
   = note: `#[deny(invalid_type_param_default)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>

error: defaults for type parameters are only allowed in `struct`, `enum`, `type`, or `trait` definitions
  --> $DIR/where-allowed.rs:235:36
   |
LL | fn in_method_generic_param_default<T = impl Debug>(_: T) {}
   |                                    ^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>

error[E0118]: no nominal type found for inherent implementation
  --> $DIR/where-allowed.rs:228:23
   |
LL | impl <T = impl Debug> T {}
   |                       ^ impl requires a nominal type
   |
   = note: either implement a trait on it or create a newtype to wrap it instead

error: aborting due to 44 previous errors

Some errors have detailed explanations: E0118, E0562, E0658, E0666.
For more information about an error, try `rustc --explain E0118`.
